--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@ function settingsApply () {
   switch (selectedOptions['text-width']) {
     case 'readable':
       document.body.style.maxWidth = '70ch';
+      document.body.style.margin   = 'auto';
       break;
     default:
       document.body.style.maxWidth = '';
+      document.body.style.margin   = '';
   }
   document.body.style.fontFamily = selectedOptions['font-family'];
   var newTarget = document.getElementById('fileToRender');
