Parse menu option

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ const menuOptions = {
     'serif': false,
     'sans-serif': true,
     'monospace': false
+  }, 'parse': {
+    'markdown': true,
+    'raw': false
   }
 };
 var selectedOptions = {};
