Changed link formatting
See discussion:
https://github.com/VSharapov/INDEXmd/issues/17#issuecomment-751413701
Fixes #17

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </style>
     <style type="text/css" media="(prefers-color-scheme: dark)">
       body {background-color: black; color: white;}
-      a {filter: invert(1) brightness(0.5) invert(1);}
+      a:link    {color: #79f;}
+      a:visited {color: #94f;}
       select, button, input {filter: invert(1);}
     </style>
     <style type="text/css" media="(prefers-color-scheme: never)">
