Changing colors yet again
Reading [this blog][1] I realized the background was either #000 or
close enough and the link colors looked great, so I am taking their
three-hex-digit approximations (and adding hover).

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     </style>
     <style type="text/css" media="(prefers-color-scheme: dark)">
       body {background-color: black; color: white;}
-      a:link    {color: #79f;}
-      a:visited {color: #94f;}
+      a:link    {color: #06f;}
+      a:visited {color: #61c;}
+      a:hover   {color: #a8c;}
       select, button, input {filter: invert(1);}
     </style>
     <style type="text/css" media="(prefers-color-scheme: never)">
