--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="icon" href="">
     <style type="text/css">
-      code, pre {
+      code, pre, xmp {
         background-color: #6666;
         padding: 2px;
         display: inline-block;
@@ -113,7 +113,7 @@ function makeFaviconText (textIn) {
 
 function updateContent () {
   var parsed = document.getElementById('parsed');
-  var rawContent = '<pre>' + textToParse + '</pre>';
+  var rawContent = '<xmp>' + textToParse + '</xmp>';
   var mdContent = converter.makeHtml(textToParse);
   parsed.innerHTML = mdContent;
   document.title = parsed.children[0].innerText;
